@@ -3,15 +3,16 @@
 class dl_subyshare_com extends Download {
     
     public function CheckAcc($cookie){
-        $data = $this->lib->curl("http://subyshare.com/?op=my_account", $cookie, "");
-        if(stristr($data, 'Premium account expire:') && stristr($data, '<strong>PREMIUM</strong>')) return array(true, "Until ".$this->lib->cut_str($this->lib->cut_str($data, '>Premium account expire:','</span>'), ' <b>','</b>'));
-		else if(stristr($data, '<strong>REGISTERED</strong> ') && !stristr($data, 'Premium account expire:')) return array(false, "accfree");
+		$data = $this->lib->curl("https://subyshare.com/account/profile", $cookie, "");
+		if(stristr($data, 'PREMIUM User') && stristr($data, 'Expiration date')) return array(true, "Until ".$this->lib->cut_str($this->lib->cut_str($data, 'Expiration date</label>','</div>'), 'class="form-control-static">','</p>') . "<br>Traffic: ".$this->lib->cut_str($this->lib->cut_str($data, 'Traffic</label>','</div>'), 'class="form-control-static">','</p>'));
+		else if(stristr($data, 'REGISTERED User')) return array(false, "accfree");
 		else return array(false, "accinvalid");
     }
     
     public function Login($user, $pass){
-        $data = $this->lib->curl("http://subyshare.com/", "lang=english;", "op=login&login={$user}&password={$pass}");
-        $cookie = "lang=english; {$this->lib->GetCookies($data)}";
+		$data = $this->lib->curl("https://subyshare.com/", "lang=english", "op=login&login={$user}&password={$pass}");
+		if(stristr($data, 'Your IP is banned')) die('Your IP is banned, cannot login');
+		$cookie = "lang=english; {$this->lib->GetCookies($data)}";
 		return $cookie;
     }
 
@@ -25,7 +26,7 @@ class dl_subyshare_com extends Download {
 			if(stristr($data,'Wrong password'))  $this->error("wrongpass", true, false, 2);
 			elseif($this->isredirect($data))	return trim($this->redirect);
 		}
-		if(stristr($data,'<h2>File Not Found</h2>') || stristr($data,'<h3>The file was removed by administrator</h3>')) $this->error("dead", true, false, 2);
+		if(stristr($data,'File Not Found</title>') || stristr($data,'<h3>The file you\'re looking for is not here</h3>')) $this->error("dead", true, false, 2);
 		elseif(stristr($data,'<small>Password:</small> <input class="bttn')) 	$this->error("reportpass", true, false);
 		elseif(!$this->isredirect($data)) {
 			$post = $this->parseForm($this->lib->cut_str($data, '<Form name="F1"', '</Form>'));
@@ -38,11 +39,12 @@ class dl_subyshare_com extends Download {
 	
 }
 
+
 /*
 * Open Source Project
-* Vinaget by ..::[H]::..
-* Version: 2.7.0
-* Tusfiles Download Plugin by thanhduongdj [15.10.2014]
-* Downloader Class By [FZ]
+* New Vinaget by LTT❤
+* Version: 3.3 LTSB
+* Subyshare.com Download Plugin  
+* Date: 15.11.2017
 */
 ?>
